# mcp-server-aedifion

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_server_aedifion/: __init__.py  client.py  server.py
