[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-aedifion"
version = "0.1.0"
description = "MCP server for interacting with the aedifion building IoT & analytics API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "tookta" }]
keywords = ["mcp", "aedifion", "iot", "building", "analytics", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-server-aedifion = "mcp_server_aedifion.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_aedifion"]
